--- a/app/boards/arm/modular_kb/modular_kb.dts
+++ b/app/boards/arm/modular_kb/modular_kb.dts
@@ -39,6 +39,20 @@
 			, <&gpio0 30  GPIO_ACTIVE_HIGH>
 			;
 	};
+
+	left_encoder: encoder_left {
+		compatible = "alps,ec11";
+		status = "okay";
+		label = "LEFT_ENCODER";
+		a-gpios = <&gpio0  8 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+		b-gpios = <&gpio0 26 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+		resolution = <4>;
+	};
+
+	sensors {
+		compatible = "zmk,keymap-sensors";
+		sensors = <&left_encoder>;
+	};
 };
 
 &adc {
