--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,8 @@
 {
   "files.associations": {
     "*.overlay": "dts"
-},
+  },
   "python.formatting.provider": "black",
-<<<<<<< HEAD
   "[c]": {
     "editor.formatOnSave": true
   },
@@ -18,10 +17,12 @@
   "[css][json][jsonc][html][markdown][yaml]": {
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "esbenp.prettier-vscode"
-  }
+  },
+  "nrf-connect.applications": [
+    "${workspaceFolder}/app",
+    "${workspaceFolder}/zephyr/samples/bluetooth/peripheral_hr",
+    "${workspaceFolder}/zephyr/samples/bluetooth/hci_rpmsg"
+  ],
+  "cmake.configureOnOpen": false,
+  "cmake.sourceDirectory": "/home/hal/Documents/zmk/app"
 }
-=======
-"cmake.sourceDirectory": "${workspaceFolder}/app",
-"nrf-connect.toolchain.path": "${nrf-connect.toolchain:2.1.1}"
-}
->>>>>>> somecommt
