--- a/app/prj.conf
+++ b/app/prj.conf
@@ -32,8 +32,8 @@ CONFIG_LOG_FUNC_NAME_PREFIX_ERR=y
 # CONFIG_BT_LOG_LEVEL_INF=y
 
 CONFIG_ZMK_KEYBOARD_NAME="HIOT20046 ZMK"
-CONFIG_ZMK_USB=n
+CONFIG_ZMK_USB=y
 CONFIG_ZMK_KSCAN_MATRIX_POLLING=y
 CONFIG_ZMK_BLE=y
 # CONFIG_BT_DEVICE_APPEARANCE=833
-CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
